--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ apache-airflow = "^2.3.0"
 pandas = "^1.4.2"
 luigi = "^3.0.3"
 numpy = "^1.22.3"
+tqdm = "^4.64.0"
+jusText = "^3.0.0"
+spacy = "^3.3.0"
+transformers = "^4.19.1"
+tokenizers = "^0.12.1"
+torch = "^1.11.0"
+openpyxl = "^3.0.9"
 
 [tool.poetry.dev-dependencies]
 
